# oundation-Models-for-Women-s-Hormonal-Health-

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
ai/cnn/: README.md
ai/harness/: README.md
ai/hormonal/: README.md  __init__.py  compare.py  conformal.py  data.py  explain.py  metrics.py  regression.py  smoothing.py  train.py
ai/llm/: README.md
benchmark/: LICENSE  MODEL_CARD.md  README.md
benchmark/eval/: ci_harness.py  reference_model.py
benchmark/results/: oof_fertility_detector.parquet  oof_reference.parquet
benchmark/splits/: loso_folds.json
configs/: base.yaml
docs/: 24h_plan.md  hackathon_info.md  model_registry.md  portability_guide.md  setup_guide.md  time_budgeting.md  workflow.md
docs/challenges/: README.md
memory/: experiment_log.md
ml/mcphases/: attempt1_ovulation.py  attempt2_variability.py  attempt3_hsmm.py  attempt4_cycle.py  attempt5_fertility_detector.py  attempt6_modality_ablation.py  backend_compare_honest.py  build_master.py  conformal.py  data_assembly.py  model_layer_dsb_ensemble.py  model_layer_experiment.py  model_layer_tabpfn_opt.py  postproc_smoothers.py  postprocess.py  postprocess_hsmm.py  shap_explain.py  train.py
ml/pytorch/: README.md  train.py
ml/tensorflow/: README.md  train.py
requirements/: ai_harness.txt  all.txt  base.txt  dev.txt  ml_extra.txt  pytorch.txt  tensorflow.txt
scripts/: launch_mlflow.ps1  launch_wandb.ps1  quick_start.ps1  setup_env.ps1  setup_env.sh  time_probe.py
tests/: test_smoke.py  test_time_probe.py
(+29 files in other folders)
