[project]
name = "hacknation-2026"
version = "0.1.0"
description = "Hack Nation MIT 2026 Summer - personal workspace"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["venv", "data", "experiments", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # black/ruff-format handles line length

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
